unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/Powerpass_Assignment_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Account assignment rules on powerpass submission</description>
    <label>Powerpass Assignment Rule</label>
    <pluralLabel>Powerpass Assignment Rules</pluralLabel>
</CustomObject>