unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>CREDIT</fullName>
                <label>Credit</label>
            </value>
            <value>
                <fullName>30DAY</fullName>
                <label>30 Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>