unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Assign_to_Store_Member__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Store_Member__c</fullName>
    <label>Assign to Store Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASM</fullName>
                <default>true</default>
                <label>ASM</label>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Area BDM</fullName>
            </value>
            <value>
                <fullName>CCS Manager</fullName>
            </value>
            <value>
                <fullName>RCM</fullName>
            </value>
            <value>
                <fullName>Trade Specialist</fullName>
            </value>
            <value>
                <fullName>SSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>