unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Create_Onboarding_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Onboarding_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Onboarding Task</label>
    <type>Checkbox</type>
</CustomField>