unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Credit_Limit_Floor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Floor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Limit - Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>