unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Days_from_Account_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Account_Creation__c</fullName>
    <label>Days from Account Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>