unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Home_Store_Model__c.field-meta.xml
<CustomField>
    <fullName>Home_Store_Model__c</fullName>
    <label>Home Store Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>