unpackaged/main/default/objects/Powerpass_Assignment_Rule__mdt/fields/Set_Digitally_Managed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Set_Digitally_Managed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Digitally Managed Flag</label>
    <type>Checkbox</type>
</CustomField>